@@ -1,3 +1,8 @@
+Fri Apr 03 15:42:40 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: joins and caps are round.  Fixes bad looking joins
+	  on graphs of quickly oscillating functions
+
 Sun Mar 15 00:04:08 2009  Jiri (George) Lebl <jirka@5z.com>
 
 	* Release 1.0.6
